# wolfdb

./: .gitignore  CODEX.md  README.md  TO_DO_list.rst  add_location_info_to_scats.py  add_location_info_to_transects.py  auth.py  cell_occupancy.py  check_systematic_scats_transect-track_location.py  check_systematic_scats_transect_location.py  check_systematic_scats_transect_location_50m.py  config.py  dead_wolves  extract_notes.py  functions.py  google_auth_bp.py  grid_paths_occupancy.py  insert_new_user.py  italian_regions.py  journal.txt  loci_list.sql  new_scat.py  notes.txt  path.py  pyproject.toml  scat.py  start.bash  tmp_def_genotypes.py  track.py  transect.py  update_cache_with_genotypes_loci_values.py  update_postgres_with_wa_loci_values.py  update_redis_with_genotypes_loci_values.py  update_redis_with_wa_loci_values.py  verify_scats_location.py  wolfdb.ini  wolfdb.py
admin_bp/: admin.py
analysis_bp/: analysis.py  cell_occupancy.py
dead_wolves_bp/: dead_wolves.py  dead_wolves2.py  dw_form.py
external_functions/: grid_occupancy.py  grid_paths_occupancy.py  paths_completeness.py
genetic_bp/: export.py  genetic.py
packs_bp/: packs.py
paths_bp/: path_form.py  paths.py  paths_export.py  paths_import.py
paths_completeness/: __init__.py  create_shapefile_with_paths_completeness.py
scats_bp/: old_scats_import.py  scat.py  scat_form.py  scats.py  scats_export.py  scats_import.py
snowtracks_bp/: snowtracks.py  track.py  track_form.py  tracks.py  tracks_export.py  tracks_import.py
src/: add_location_info_to_scats.py  add_location_info_to_transects.py  (+21 more)
(+252 files in other folders)
