[project]
name = "wolfdb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Olivier Friard", email = "olivier.friard@unito.it" }
]
dependencies = [
    "flask>=3.0.0",
    "psycopg2>=2.9.9",
    "Flask-Session>=0.5.0",
    "Shapely>=2.0.2",
    "utm>=0.7.0",
    "WTForms>=3.1.1",
    "openpyxl>=3.1.2",
    "pandas>=2.0.3",
    "fiona>=1.9.5",
    "odfpy>=1.4.1",
    "redis>=5.0.1",
    "matplotlib==3.7.3",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "google-auth>=2.23.4",
    "google-auth-oauthlib>=1.1.0",
    "sqlalchemy>=2.0.23",
    "psycopg>=3.1.13",
    "gunicorn>=22.0.0",
    "pip>=24.0",
    "authlib>=1.3.2",
    "google-api-python-client>=2.143.0",
    "folium>=0.17.0",
    "geojson>=3.1.0",
    "flask-executor>=1.0.0",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
